# xvortices

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: build-wheels.yml
docs/source/: conf.py
notebooks/: 1.TCExample.ipynb  2.EddyExample.ipynb
scripts/: benchmark_backend.py  validate_ibtracs.py
tests/: test_core.py
xvortices/: __init__.py  _backend_module.c  _core_module.c  core.py  meson.build  utils.py  xvortices.py
xvortices/src/: core.f90
